working including test env

--- a/nb.ipynb
+++ b/nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "44a750cf",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "from testing_kap import test_util\n",
     "from utility import *\n",
     "from utility_temp import *\n",
-    "from utility_vc import *"
+    "from utility_vc import *\n",
+    "from utility_comp import *"
    ]
   },
   {
